@@ -142,4 +142,12 @@ AC_DEFUN([AC_NETATALK_LIBS_SUMMARY], [
 		AC_MSG_RESULT([        LIBS   = $LIBEVENT_CFLAGS])
 		AC_MSG_RESULT([        CFLAGS = $LIBEVENT_LDFLAGS])
     fi
+
+    AC_MSG_RESULT([    TDB:])
+    if test x"$use_bundled_tdb" = x"yes"; then
+		AC_MSG_RESULT([        bundled])
+    else
+		AC_MSG_RESULT([        LIBS   = $TDB_LIBS])
+		AC_MSG_RESULT([        CFLAGS = $TDB_CFLAGS])
+    fi
 ])
